phpあたりを調整

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -4,6 +4,12 @@ FROM ${WS_OS}
 
 USER root
 
+ENV USER_NAME developer
+RUN echo ${USER_NAME}
+RUN useradd $USER_NAME
+RUN echo "${USER_NAME}:${USER_NAME}_pass" |chpasswd
+RUN echo "$USER_NAME    ALL=(ALL)       ALL" >> /etc/sudoers
+
 ############
 # yum update:
 ############
@@ -15,21 +21,17 @@ RUN yum install -y sudo
 RUN yum -y groupinstall "Development Tools"
 
 ############
-# PHP:
+# PHP + α
 ############
+RUN yum -y install epel-release
 RUN yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 ARG PHP_VER
-RUN yum -y install \
-    php${PHP_VER} \
-    php${PHP_VER}-devel \
-    php${PHP_VER}-mysqlnd \
-    php${PHP_VER}-mbstring \
-    php${PHP_VER}-gd
+RUN yum -y install --enablerepo=remi,remi-php${PHP_VER} php php-devel php-mbstring php-pdo php-xml
 
 ############
 # Composer:
 ############
-RUN curl -sS https://getcomposer.org/installer | php${PHP_VER}
+RUN curl -sS https://getcomposer.org/installer | php
 RUN mv composer.phar /usr/local/bin/composer
 
 ############
@@ -37,8 +39,10 @@ RUN mv composer.phar /usr/local/bin/composer
 ############
 
 RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.29.0/install.sh | bash
+
 ENV NODE_VERSION 10.16.0
-ENV NVM_DIR /home/${USER}/.nvm
-RUN . ~/.nvm/nvm.sh && nvm install $NODE_VERSION && nvm alias default $NODE_VERSION && npm install -g gulp yo hubot coffee-script browserify
+ENV NVM_DIR /home/$USER_NAME/.nvm
+RUN . ~/.nvm/nvm.sh && nvm install $NODE_VERSION && nvm alias default $NODE_VERSION
+# RUN npm install -g gulp yo hubot coffee-script browserify
 
 WORKDIR /var/www
