--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ volumes:
     mysql:
         driver: ${VOLUMES_DRIVER}
 
-
 services:
     workspace:
         build:
@@ -24,6 +23,8 @@ services:
         networks:
             - frontend
             - backend
+        ports:
+            - "8000:8000"
     mysql:
         build:
             context: "${MYSQL_PATH}"
@@ -70,6 +71,8 @@ services:
             - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
             - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
             - ${NGINX_SSL_PATH}:/etc/nginx/ssl
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
         ports:
             - "${NGINX_HOST_HTTP_PORT}:80"
             - "${NGINX_HOST_HTTPS_PORT}:443"
@@ -78,3 +81,10 @@ services:
         networks:
             - frontend
             - backend
+    certbot:
+        image: certbot/certbot
+        restart: unless-stopped
+        volumes:
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
