--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -37,4 +37,5 @@ ADD ./startup.sh /opt/startup.sh
 RUN sed -i 's/\r//g' /opt/startup.sh
 CMD ["/bin/bash", "/opt/startup.sh"]
 
+USER root
 EXPOSE 80 443
